--- a/css/style.css
+++ b/css/style.css
@@ -4,15 +4,18 @@
 }
 body{
     margin: 0;
+    background-image: url(/Site-Freelance/img/solid-concrete-wall-textured-backdrop.jpg);
+    background-size: contain;
     font-family: 'Roboto', sans-serif;
 }
 .navbar{
     display: flex;
     flex-flow: row wrap;
     height: 100px;
-    background: #333333;
+    background: #11111194;
     justify-content: center;
     align-items: center;
+    /* border-bottom: 2px solid #e44c41; */
 }
 .logo{
     flex:20%;
@@ -56,7 +59,7 @@ body{
 .header{
     display:flex;
     height:auto;
-    background: #181717;
+    background: #00000098;
     flex-flow: row wrap;
     justify-content: center;
     align-items: center;
@@ -98,9 +101,84 @@ body{
 }
 section{
     margin-top: 80px;
-    border:1px solid black;
     margin-left: 5%;
     margin-right: 5%;
     height: 400px;
-    display: ;
+}
+footer{
+    height: 400px;
+    background-image: linear-gradient(180deg,#141313, black);
+    text-align: center;
+    border-top: 2px solid #e44c41;
+}
+.logo-rodape{
+    padding:100px;
+
+}
+.Sitio{
+    font-family: 'Lobster', cursive;
+    color: #e44c41;
+    font-size: 32px;
+}
+.whats{
+    position:fixed;
+    bottom: 5px;
+    right:5px;
+}
+section{
+    margin-top: 80px;
+    margin: 0;
+    display: inline-block;
+    padding: 5%;
+    background-color: #0000001c;
+    display:flex;
+    width: 100%;
+    border:2px solid purple;
+    text-align: center;
+}
+section h2{
+    display: inline-block;
+    margin:0;
+    padding: 5%;
+    width: 100%;
+    text-align: center;
+    font-size: 50px;
+    font-family: 'Roboto', sans-serif;
+    color: #e44c41;
+    text-decoration:double;
+    margin-bottom: 5%;
+    font-weight: bold;
+}
+.servicos{
+    display: inline-block;
+    margin-top: 5%;
+}
+.card{
+    display: inline-block;
+}
+.cardapio-home{
+    height: auto;
+    width: 100%;
+    background: #1817174f;
+    /* border:1px solid purple; */
+}
+.cardapio-home-item{
+    display: inline-flex;
+    margin-left: 11%;
+    margin-top: 50px;
+    justify-content: center;
+    height: 200px;
+    width: 250px;
+    background-color: white;
+    overflow:visible;
+}
+.cardapio-home img{
+    width:250px;
+}
+.cardapio-home h3{
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.658);
+    width: 250px; text-align: center;
+    color: #f9be4a;
+    text-transform: uppercase;
 }
